# Api-Project

./: .env  README.md  main.py  pyproject.toml  requirements.txt  routes.py
Controller/: empregado_controller.py  vehicle_controller.py
Database/: connection.py
Models/: empregado_model.py
app/adapters/: employee_adapter.py  vehicle_adapter.py
app/controller/: empregado_controller.py  vehicle_controller.py
app/database/: __init__.py  imports.py  insert_data.py
app/database/scripts/: employee_test.sql
app/models/: empregado_model.py  vehicle_model.py
app/ports/: employee_port.py  vehicle_port.py
app/routers/: __init__.py  employee.py  vehicle.py
app/schemas/: empregadoRequests.py  vehicleRequests.py
app/services/: empregado_service.py  vehicle_service.py
app/swagger_models/: employeeResponses.py  empregadoRequests.py  generalResponses.py  vehicleRequests.py  vehicleResponses.py
schemas/: empregado_schema.py  vehicle_schema.py
tests/: conftest.py  test_employee.py
