[tool.poetry]
name = "projetoback"
version = "0.1.0"
description = ""
authors = ["Jguilhermessousa <joao.guilherme08@aluno.ifce.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
eval-type-backport = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
